--- a/regex-exercise.ipynb
+++ b/regex-exercise.ipynb
@@ -205,6 +205,147 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8aec54bb-6219-4074-9d62-45e7e75ed3de",
+   "metadata": {},
+   "source": [
+    "# 5.Write a regex to extract the various parts of these logfile lines:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "658a7365-4aed-48a7-b902-2d25e79bcbe1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>method</th>\n",
+       "      <th>path</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>http_version</th>\n",
+       "      <th>status</th>\n",
+       "      <th>bytes</th>\n",
+       "      <th>user_agent</th>\n",
+       "      <th>ip</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GET</td>\n",
+       "      <td>/api/v1/sales?page=86</td>\n",
+       "      <td>16/Apr/2019:193452+0000</td>\n",
+       "      <td>HTTP/1.1</td>\n",
+       "      <td>200</td>\n",
+       "      <td>510348</td>\n",
+       "      <td>python-requests/2.21.0</td>\n",
+       "      <td>97.105.19.58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>POST</td>\n",
+       "      <td>/users_accounts/file-upload</td>\n",
+       "      <td>16/Apr/2019:193452+0000</td>\n",
+       "      <td>HTTP/1.1</td>\n",
+       "      <td>201</td>\n",
+       "      <td>42</td>\n",
+       "      <td>User-Agent: Mozilla/5.0 (X11; Fedora; Fedora; ...</td>\n",
+       "      <td>97.105.19.58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>GET</td>\n",
+       "      <td>/api/v1/items?page=3</td>\n",
+       "      <td>16/Apr/2019:193453+0000</td>\n",
+       "      <td>HTTP/1.1</td>\n",
+       "      <td>429</td>\n",
+       "      <td>3561</td>\n",
+       "      <td>python-requests/2.21.0</td>\n",
+       "      <td>97.105.19.58</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  method                         path                timestamp http_version  \\\n",
+       "0    GET        /api/v1/sales?page=86  16/Apr/2019:193452+0000     HTTP/1.1   \n",
+       "1   POST  /users_accounts/file-upload  16/Apr/2019:193452+0000     HTTP/1.1   \n",
+       "2    GET         /api/v1/items?page=3  16/Apr/2019:193453+0000     HTTP/1.1   \n",
+       "\n",
+       "  status   bytes                                         user_agent  \\\n",
+       "0    200  510348                             python-requests/2.21.0   \n",
+       "1    201      42  User-Agent: Mozilla/5.0 (X11; Fedora; Fedora; ...   \n",
+       "2    429    3561                             python-requests/2.21.0   \n",
+       "\n",
+       "             ip  \n",
+       "0  97.105.19.58  \n",
+       "1  97.105.19.58  \n",
+       "2  97.105.19.58  "
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logfile_re = r'''\n",
+    "^(?P<method>GET|POST)\n",
+    "\\s+\n",
+    "(?P<path>.*?)\n",
+    "\\s+\n",
+    "\\[(?P<timestamp>.*?)\\]\n",
+    "\\s+\n",
+    "(?P<http_version>.*?)\n",
+    "\\s+\n",
+    "\\{(?P<status>\\d+)\\}\n",
+    "\\s+\n",
+    "(?P<bytes>\\d+)\n",
+    "\\s+\n",
+    "\"(?P<user_agent>.*)\"\n",
+    "\\s+\n",
+    "(?P<ip>.*)$\n",
+    "'''\n",
+    "\n",
+    "lines = pd.Series([\n",
+    "    'GET /api/v1/sales?page=86 [16/Apr/2019:193452+0000] HTTP/1.1 {200} 510348 \"python-requests/2.21.0\" 97.105.19.58',\n",
+    "    'POST /users_accounts/file-upload [16/Apr/2019:193452+0000] HTTP/1.1 {201} 42 \"User-Agent: Mozilla/5.0 (X11; Fedora; Fedora; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/73.0.3683.86 Safari/537.36\" 97.105.19.58',\n",
+    "    'GET /api/v1/items?page=3 [16/Apr/2019:193453+0000] HTTP/1.1 {429} 3561 \"python-requests/2.21.0\" 97.105.19.58',\n",
+    "])\n",
+    "lines.str.extract(logfile_re, re.VERBOSE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2feb0e1d-9935-4234-8ef8-2e93f540740d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
